[K/N][tests] Use JDK 17 to fix test run time regression caused by JDK 11
4e79d3e switches K/N test runs from JDK 8 (project default) to JDK 11.
Surprisingly, this makes certain test runs 15-25% slower.

To address that, this commit switches K/N test runs to JDK 17.