@@ -77,6 +77,11 @@ val test by nativeTest(
             kotlinBuildProperties.getOrNull("kotlin.native.pathToDarwinDist") != null
         )
     }
+
+    // To workaround KTI-2421, we make these tests run on JDK 17 instead of the project-default JDK 8.
+    // Kotlin test infra uses reflection to access JDK internals.
+    // With JDK 17, some JVM args are required to allow that:
+    jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
 }
 
 val generateTests by generator("org.jetbrains.kotlin.generators.tests.GenerateNativeTestsKt") {
